--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "18.13.0",
+    "dotenv": "^16.0.3",
     "jest": "^29.4.2",
     "ts-jest": "^29.0.5",
     "aws-cdk": "2.66.1",
