--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
     "offboarding-automation": "bin/offboarding-automation.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -noEmit",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy": "AWS_PROFILE=TEMP-personalAwsAcct cdk deploy"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.111",
     "@types/jest": "^29.4.0",
     "@types/node": "18.13.0",
+    "aws-cdk": "2.66.1",
     "dotenv": "^16.0.3",
+    "esbuild": "^0.17.10",
     "jest": "^29.4.2",
     "ts-jest": "^29.0.5",
-    "aws-cdk": "2.66.1",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   },
